force-app/main/default/objects/Applied_Payments__c/Applied_Payments__c.object-meta.xml
<CustomObject>
    <label>Applied Payments</label>
    <nameField>
        <label>Applied Payments Records</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>