force-app/main/default/objects/Applied_Payments__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will be set by MuleSoft to link to the account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applied Payments</relationshipLabel>
    <relationshipName>Applied_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>