force-app/main/default/objects/Applied_Payments__c/fields/Approved_vs_Actual__c.field-meta.xml
<CustomField>
    <fullName>Approved_vs_Actual__c</fullName>
    <formula>Approved_Amount__c  -  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved vs Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>