force-app/main/default/objects/Applied_Payments__c/fields/Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>Check_Amount__c</fullName>
    <label>Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>