force-app/main/default/objects/Applied_Payments__c/fields/Composite_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Composite_Identifier__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>