force-app/main/default/objects/Applied_Payments__c/fields/Composite_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Composite_Unique_Identifier__c</fullName>
    <formula>&quot;Patient: &quot; &amp; 
Account_Id__r.FirstName &amp; &quot; &quot; &amp; Account_Id__r.LastName &amp; 
&quot;, Payer: &quot; &amp; Payer_Name__c &amp; 
&quot;, DOS: &quot; &amp; TEXT(DOS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Composite Unique Identifier</label>
    <type>Text</type>
</CustomField>