force-app/main/default/objects/Applied_Payments__c/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <formula>Expected_Reimbursement__c  -  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected v Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>