force-app/main/default/objects/Applied_Payments__c/fields/DOS__c.field-meta.xml
<CustomField>
    <fullName>DOS__c</fullName>
    <description>Date of Service</description>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>