force-app/main/default/objects/Applied_Payments__c/fields/Expected_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Expected_Reimbursement__c</fullName>
    <label>Expected Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>