force-app/main/default/objects/Applied_Payments__c/fields/Expected_v_Approved__c.field-meta.xml
<CustomField>
    <fullName>Expected_v_Approved__c</fullName>
    <formula>Expected_Reimbursement__c  -   Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected v Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>