force-app/main/default/objects/Applied_Payments__c/fields/Fee_Schedule_Audit__c.field-meta.xml
<CustomField>
    <fullName>Fee_Schedule_Audit__c</fullName>
    <label>Fee Schedule Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correct</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>