force-app/main/default/objects/Applied_Payments__c/fields/Financial_Class__c.field-meta.xml
<CustomField>
    <fullName>Financial_Class__c</fullName>
    <label>Financial Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>