force-app/main/default/objects/Applied_Payments__c/fields/Insurance_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Type__c</fullName>
    <label>Insurance Policy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>