force-app/main/default/objects/Applied_Payments__c/fields/Location_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Location_Grouping__c</fullName>
    <label>Location Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conservative</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>