force-app/main/default/objects/Applied_Payments__c/fields/Location_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Zip_Code__c</fullName>
    <label>Location Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>