force-app/main/default/objects/Applied_Payments__c/fields/MD_Cons_Provider_Grouping__c.field-meta.xml
<CustomField>
    <fullName>MD_Cons_Provider_Grouping__c</fullName>
    <label>MD/Cons Provider Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>Cons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>