force-app/main/default/objects/Applied_Payments__c/fields/Patient_Guid__c.field-meta.xml
<CustomField>
    <fullName>Patient_Guid__c</fullName>
    <description>CareCloud Patient GUID</description>
    <label>CareCloud Patient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>