force-app/main/default/objects/Applied_Payments__c/fields/Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Id__c</fullName>
    <description>Internal ID which is good to keep in case of a future change</description>
    <label>CareCloud Internal Patient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>