force-app/main/default/objects/Applied_Payments__c/fields/Payer_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_Claim_Number__c</fullName>
    <label>Payer Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>