force-app/main/default/objects/Applied_Payments__c/fields/Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>Payer_Id__c</fullName>
    <label>Payer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>