force-app/main/default/objects/Applied_Payments__c/fields/Primary_Insurance_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Policy_Type__c</fullName>
    <label>Primary Insurance Policy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>