force-app/main/default/objects/Applied_Payments__c/fields/Reversal_Type__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Type__c</fullName>
    <label>Reversal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>