force-app/main/default/objects/Applied_Payments__c/fields/Transaction_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Detail_Id__c</fullName>
    <description>PK Field</description>
    <externalId>true</externalId>
    <label>Snowflake Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>