force-app/main/default/objects/Applied_Payments__c/fields/VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>VOB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOB Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Applied Payments</relationshipLabel>
    <relationshipName>Applied_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>