force-app/main/default/objects/Applied_Payments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>DOS__c</columns>
    <columns>Expected_Reimbursement__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Amount__c</columns>
    <columns>Expected_v_Approved__c</columns>
    <columns>Delta__c</columns>
    <columns>Payer__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Procedure_Code__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Location_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Underpayments</label>
</ListView>