force-app/main/default/objects/Applied_Payments__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>DOS__c</columns>
    <columns>Expected_Reimbursement__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Amount__c</columns>
    <columns>Expected_v_Approved__c</columns>
    <columns>Delta__c</columns>
    <columns>Payer__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Procedure_Code__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>In Progress</label>
</ListView>