force-app/main/default/objects/Applied_Payments__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>DOS__c</columns>
    <columns>Expected_Reimbursement__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Amount__c</columns>
    <columns>Expected_v_Approved__c</columns>
    <columns>Delta__c</columns>
    <columns>Payer__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Procedure_Code__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fee_Schedule_Audit__c</columns>
    <columns>Location_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>MD_Cons_Provider_Grouping__c</field>
        <operation>equals</operation>
        <value>MD</value>
    </filters>
    <label>New</label>
</ListView>